Added the base  to a constant file

--- a/pet-products.html
+++ b/pet-products.html
@@ -34,5 +34,6 @@
     <button id="checkout-btn" onclick="location.href='cart.html'">Checkout</button> <!-- Link to cart page -->
     
     <script src="pet-product.js"></script>
+    <script src="const.js"></script>
 </body>
 </html>
