linked the URLs

--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
     <footer>
         <p>&copy; 2024 Pet Products Store</p>
     </footer>
-
+    <script src="const.js"></script>
     <script src="pet-product.js"></script>
 </body>
 </html>
