--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -25,7 +25,7 @@
     <footer>
         <p>&copy; 2024 Pet Products Store</p>
     </footer>
-
+    <script src="const.js"></script>
     <script src="order-confirmation.js"></script>
 </body>
 </html>
