changed the title of the website

--- a/pet-products.html
+++ b/pet-products.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Products Store</title>
+    <title>Doggy Store</title>
     <link rel="stylesheet" href="pet-products.css">
 </head>
 <body>
     <header>
-        <h1>Pet Products Store</h1>
+        <h1>Doggy Store</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
